feat: challenges topics per difficulty added

--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -106,7 +106,8 @@
     "generate": "Generate",
     "back": "Cancel",
     "topic": "Topic",
-    "difficulty": "Difficulty"
+    "difficulty": "Difficulty",
+    "select-topic": "Select a topic"
   },
   "competition": {
     "title": "Competition in Progress",
