--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -106,7 +106,8 @@
     "generate": "Generar",
     "back": "Cancelar",
     "topic": "Tema",
-    "difficulty": "Dificultad"
+    "difficulty": "Dificultad",
+    "select-topic": "Selecciona un tema"
   },
   "competition": {
     "title": "Competencia en Progreso",
